@@ -179,8 +179,7 @@
         <junit.version>4.12</junit.version>
         <easymock.version>3.2</easymock.version>
         <rest-assured.version>3.0.1</rest-assured.version>
-        <mockito-all.version>1.10.19</mockito-all.version>
-        <mockito-core.version>2.8.47</mockito-core.version>
+        <mockito-core.version>3.12.4</mockito-core.version>
         <assertj.version>3.6.2</assertj.version>
         <jsonassert.version>1.4.0</jsonassert.version>
         <hamcrest-all.version>1.3</hamcrest-all.version>
@@ -619,6 +618,11 @@
 
             <dependency>
                 <groupId>org.opensearch.client</groupId>
+                <artifactId>opensearch-rest-high-level-client</artifactId>
+                <version>${opensearch.client.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opensearch.client</groupId>
                 <artifactId>transport</artifactId>
                 <version>${opensearch.client.version}</version>
             </dependency>
@@ -829,12 +833,6 @@
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
-                <artifactId>mockito-all</artifactId>
-                <version>${mockito-all.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
                 <version>${mockito-core.version}</version>
                 <scope>test</scope>
@@ -1023,8 +1021,12 @@
                         <includes>
                             <include>**/*.java</include>
                         </includes>
-                        <parallel>methods</parallel>
-                        <argLine>${surefireArgLine} -Xmx1536m -XX:MaxPermSize=256m -Duser.timezone=${user.timezone}
+                        <argLine>
+                                -Xmx1536m -XX:MaxPermSize=256m -Duser.timezone=${user.timezone}
+                                -Dio.netty.tryReflectionSetAccessible=true
+                                --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+                                --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+                                --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
                         </argLine>
                     </configuration>
                 </plugin>
